# skill-browser-session

./: README.md  UPDATE.md  pyproject.toml  skill.yaml
src/skill_browser_session/: main.py
tests/: test_execute.py  test_skill_manifest_exists.py
